# falcon-air

./: Cargo.toml  README.md
crates/falcon/: Cargo.toml
crates/falcon/src/big_air/: claim.rs
crates/shake256/: Cargo.toml  README.md
crates/shake256/benches/: prover_bench.rs
crates/shake256/docs/: air.md  input.md  output.md
crates/shake256/src/: constants.rs  lib.rs  main.rs  public_data.rs  utils.rs
crates/shake256/src/air/: chi_8_8_8.rs  keccak.rs  keccak_round.rs  mod.rs  rc_7_7_7.rs  shake256.rs  xor_8_8.rs  xor_8_8_8.rs
crates/shake256/src/debug_tools/: assert_constraints.rs  relation_tracker.rs
crates/shake256/src/interaction/: chi_8_8_8.rs  keccak.rs  keccak_round.rs  mod.rs  rc_7_7_7.rs  relations.rs  shake256.rs  xor_8_8.rs  xor_8_8_8.rs
crates/shake256/src/preprocessed/: chi_8_8_8.rs  mod.rs  rc_7_7_7.rs  xor_8_8.rs  xor_8_8_8.rs
crates/shake256/src/trace/: chi_8_8_8.rs  keccak.rs  keccak_round.rs  mod.rs  rc_7_7_7.rs  shake256.rs  xor_8_8.rs  xor_8_8_8.rs
crates/shake256/tests/: prover.rs
src/: main.rs
