[package]
name = "falcon-air"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "falcon-air"
path = "bin/falcon-air.rs"

[workspace]
members = [
    "crates/falcon",
]

[dependencies]
bincode = "1.3"
bzip2 = "0.6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
falcon = { path = "crates/falcon" }

[dev-dependencies]

[profile.release-with-debug]
inherits = "release"
debug = true
