[package]
name = "falcon"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
num-traits = "0.2.17"
stwo = { git = "https://github.com/starkware-libs/stwo.git", rev = "32b21c4852c84e7e009e8a9fe222bc79f38ce82a", features = [
    "prover",
    "parallel",
] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo.git", rev = "32b21c4852c84e7e009e8a9fe222bc79f38ce82a", features = [
    "prover",
] }
